# DefectDetectionApplication

./: .gitignore  DDA_END_TO_END_ARCHITECTURE.md  DDA_Greengrass_Component_Creator.ipynb  DDA_SageMaker_Model_Training_and_Compilation copy.ipynb  DDA_SageMaker_Model_Training_and_Compilation.ipynb  DEVELOPMENT.md  INFERENCE_UPLOADER_SETUP.md  README.md  SageMaker Training for DDA.ipynb  SageMaker_ Training_DDA_Rajat.ipynb  YOLO_COOKIE_README.md  YOLO_Cookie_Defect_Detection.ipynb  YOLO_NOTEBOOK_USAGE_GUIDE.md  __init__.py  build-custom.sh  build-inference-uploader.sh  dda-deployment-guide.md  deploy-inference-uploader.sh  gdk-component-build-and-publish.sh  gdk-config.json  gg_component_orchestrator.ipynb  installGreengrassCore.sh  launch-arm64-build-server.sh  pyproject.toml  recipe-amd64.yaml  recipe-arm64.yaml  recipe.yaml  setup-build-server.sh  setup.cfg  setup.py  test_yolo_notebook.py  yolo_comparison.py  yolo_format_converter.py  yolo_training.py
doc/: conf.py  (+1 more)
src/edgemlsdk/src/: CMakeLists.txt  README.md  conanfile.py  pylintrc.toml  run_emexif.sh
src/edgemlsdk/src/cmake/: FindFFmpeg.cmake  FindSwig.cmake  FindTriton.cmake  filecopy.cmake  swig.cmake
src/edgemlsdk/src/docs/: CMakeLists.txt  Doxyfile.in  custom.css  include_all.h
src/edgemlsdk/src/docs/source/: conf.py  edge_app.rst  index.rst
src/edgemlsdk/src/docs/source/components/: aws-cpp-sdk.rst  gst_application.rst  properties.rst  tracers.rst
src/edgemlsdk/src/include/Panorama/: apidefs.h  app.h  aws.h  buffer.h  chrono.h  comobj.h  comptr.h  credentials.h  eventing.h  flowcontrol.h  gst.h  gst_application.h  guid.h  message_broker.h  mlops.h  properties.h  python.h  trace.h  unknown.h  vector.h  videocapture.h
src/edgemlsdk/src/profiles/: clang_x86_64_Debug.yml
src/edgemlsdk/src/src/: CMakeLists.txt
src/edgemlsdk/src/src/app/: CMakeLists.txt  app.cpp  credential_provider.cpp  device_env.h  mds_client.cpp  mds_credential_provider.cpp  mds_property_delegate.cpp
src/edgemlsdk/src/src/aws/: CMakeLists.txt  aws_context.cpp  default_credential_provider.cpp  iot_shadow_property_delegate.cpp  secrets_manager_expansion.cpp
src/edgemlsdk/src/src/aws/mqtt/: mqtt_message.cpp  mqtt_protocol_client.cpp  mqtt_protocol_factory.cpp  mqtt_subscription.cpp
src/edgemlsdk/src/src/aws/s3/: s3_expansion.cpp  s3_property_delegate.cpp  s3_protocol_client.cpp  s3_protocol_client_factory.cpp  s3_protocol_message.cpp
src/edgemlsdk/src/src/bindings/: CMakeLists.txt  panorama_projections.i
src/edgemlsdk/src/src/bindings/python/: CMakeLists.txt  embed.cpp  install.ps1
src/edgemlsdk/src/src/core/: CMakeLists.txt  buffer.cpp  chrono.cpp  memcheck.cpp  vector.cpp  version.cpp
src/edgemlsdk/src/src/core/message_broker/: batch_payload.cpp  buffer_payload.cpp  loopback_protocol.cpp  message_broker.cpp  message_broker_event_handler.cpp  message_id_variables.h  payload_base.h  protocol_client_base.h  protocol_client_event_handler.cpp
src/edgemlsdk/src/src/core/property/: cli_property_delegate.cpp  expansion_base.h  file_property_delegate.cpp  properties.cpp  property_collection.cpp  property_event_handler.cpp  property_manager.h  string_expansion.cpp
src/edgemlsdk/src/src/core/rest/: curl.cpp  request.cpp  response.cpp  rest.h
src/edgemlsdk/src/src/core/trace/: console_trace_listener.cpp  file_trace_listener.cpp  http_trace_listener.cpp  tracer.cpp
src/edgemlsdk/src/src/gst/: CMakeLists.txt  gst.cpp  meta.cpp
src/edgemlsdk/src/src/gst/gstrunner/: gst_runner.h  pipeline.cpp  pipeline_definition.cpp  pipeline_error.cpp  pipeline_event_handler.cpp  pipeline_manager.cpp  pipeline_manager_event_handler.cpp  pipeline_structure.cpp  (+2 more)
src/edgemlsdk/src/src/gst_application/: CMakeLists.txt  edge_app.cpp  edge_app.h  main.cpp  plugin_loader.cpp
src/edgemlsdk/src/src/include/: collection_base.h  env_vars.h  evictable_list.h  filesystem_safe.h  misc.h  scheduling.h  subscriber.h
src/edgemlsdk/src/src/mlops/: CMakeLists.txt
src/edgemlsdk/src/src/tools/: CMakeLists.txt  capture_tool.cpp
src/edgemlsdk/src/src/video_capture/: CMakeLists.txt  ffmpeg_video_clip.cpp  h264_encoding_handler.cpp  h264_packet.cpp  video_capture.cpp  video_capture_event_handler.cpp  video_capture_internal.h  video_clip_collection.cpp  video_clip_manager.h  video_payload.cpp
src/edgemlsdk/src/test/: CMakeLists.txt  TestUtils.h  gcov_for_clang.sh  main.cpp
src/edgemlsdk/src/test/aws/: aws_property_delegate_tests.cpp  aws_variable_expansion_tests.cpp  mqtt_protocol_client_tests.cpp  s3_protocol_client_tests.cpp
src/edgemlsdk/src/test/core/: buffer_tests.cpp  com_tests.cpp  http_trace_listener_tests.cpp  misc_tests.cpp  properties_tests.cpp  scheduling_tests.cpp  trace_tests.cpp
src/edgemlsdk/src/test/gst/: gst_elementlatency_tracer_tests.cpp  gst_fps_tracer_tests.cpp  gst_plugin_tests.cpp  payload_metadata_tests.cpp  pipeline_manager_tests.cpp  pipeline_structure_tests.cpp  pipeline_tests.cpp  retry_tests.cpp
src/edgemlsdk/src/test/gst_application/: app_plugin_tests.cpp  edge_app_tests.cpp  test_bad_plugin.py  test_plugin.cpp  test_plugin.py
src/edgemlsdk/src/test/longevity/: README.md  delegates.json  deploy.py  longevity.json
src/edgemlsdk/src/test/mlops/: triton_tests.cpp
src/edgemlsdk/src/test/panorama/: mds_tests.cpp  panorama_app_tests.cpp  panorama_stand_alone_tests.cpp
src/edgemlsdk/src/test/python/: device_application_tests.py  file_protocol_client_tests.py  gst_tests.py  message_broker_tests.py  mqtt_protocol_client_tests.py  property_tests.py  python_protocol_client_tests.py  python_tests.cpp  query_interface_tests.py  run_all_tests.py  s3_protocol_client_tests.py  setup_coverage.py  sqlite_protocol_client_tests.py  test_db_model.py  test_utils.py  trace_tests.py  triton_tests.py
src/edgemlsdk/src/test/test_with_mock/: main.cpp  test_app_request_handler.cpp  test_app_request_handler.h
src/edgemlsdk/src/test/videocapture/: vc_clip_creation_tests.cpp  vc_clip_manager_tests.cpp
src/edgemlsdk/src/utilities/: create_debian.sh  create_whl.ps1  extract_version.cpp  install_aws_dependencies.sh  machine_setup.sh  publish.sh
(+782 files in other folders)
